Dragged in images dont overlap properly #58550

Closed
opened 2018-12-02 21:34:18 +01:00 by green giant · 11 comments

System Information
Operating system: Windows 10
Graphics card: Gtz 970

Blender Version
Broken: 2.80 beta Date: 2018-11-30 22:29

Short description of error
When dragging in images the planes don't overlap properly. One is drawn fully over the other even if its partially behind it. I would expect it partially occluded based on depth like normal geometry

Exact steps for others to reproduce the error
Drag in two images. Rotate one 90 degrees to the other. Rotate view around and observe that one images are not drawn properly

Screenshot 2018-12-02 14.30.40.png

**System Information** Operating system: Windows 10 Graphics card: Gtz 970 **Blender Version** Broken: 2.80 beta Date: 2018-11-30 22:29 **Short description of error** When dragging in images the planes don't overlap properly. One is drawn fully over the other even if its partially behind it. I would expect it partially occluded based on depth like normal geometry **Exact steps for others to reproduce the error** Drag in two images. Rotate one 90 degrees to the other. Rotate view around and observe that one images are not drawn properly ![Screenshot 2018-12-02 14.30.40.png](https://archive.blender.org/developer/F5793046/Screenshot_2018-12-02_14.30.40.png)
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83

#61620 was marked as duplicate of this issue

#61620 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Clément Foucault was assigned by Jacques Lucke 2018-12-03 12:11:55 +01:00
Member

This is a limitation currently. https://developer.blender.org/T57696#551945

Not sure if that will be fixed eventually.

This is a limitation currently. https://developer.blender.org/T57696#551945 Not sure if that will be fixed eventually.

We could at least support it for alpha = 1.0 images. The problem is that we need to detect if the image make use of its alpha channel.

We could at least support it for alpha = 1.0 images. The problem is that we need to detect if the image make use of its alpha channel.
Added subscribers: @AdrianFerguson, @fclem, @salilsay, @IonUppercut

Added subscriber: @brecht

Added subscriber: @brecht

@brecht is there a way to detect that an image has a non opaque alpha channel? Or should we add a "use transparency" toggle option ?

@brecht is there a way to detect that an image has a non opaque alpha channel? Or should we add a "use transparency" toggle option ?

If either Use Alpha on the image is off or ibuf->planes != 32, then we know the image file does not have alpha. Use Alpha` could be exposed in the image empty UI for manual control.

It's not uncommon to have images saved with an alpha channel that is fully opaque, so it won't handle all cases. It's possible to look at the alpha values to see if they are all opaque, either every time the GPU texture is created if we think it's worth the cost. Alternatively we could try do some detection the first time the image is loaded and change some settings based on that, though it's potentially confusing if the image file is modified later to have alpha.

If either `Use Alpha` on the image is off or `ibuf->planes != 32`, then we know the image file does not have alpha. Use Alpha` could be exposed in the image empty UI for manual control. It's not uncommon to have images saved with an alpha channel that is fully opaque, so it won't handle all cases. It's possible to look at the alpha values to see if they are all opaque, either every time the GPU texture is created if we think it's worth the cost. Alternatively we could try do some detection the first time the image is loaded and change some settings based on that, though it's potentially confusing if the image file is modified later to have alpha.

This issue was referenced by c5fc861172

This issue was referenced by c5fc861172879102034129ecbe653e91eeff5caf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58550
No description provided.